<resources>
    <string name="app_name">SugerTime</string>

    <string name="splash_title">SugerTime</string>

    <string name="login_title">Hello there\nWelcome Back</string>
    <string name="login_loginString">Sign In to continue</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_log_in_button">LOG IN</string>
    <string name="login_sing_up_string">New User?</string>
    <string name="login_sing_up_button">SIGN UP</string>

    <string name="signUp_title">Welcome</string>
    <string name="signUp_signUp_string">SignUp to start buy sweet things</string>
    <string name="singUp_fullName_hint">Full Name</string>
    <string name="singUp_username_hint">Username</string>
    <string name="singUp_email_hint">Email</string>
    <string name="singUp_role_hint">Role</string>
    <string name="singUp_password_hint">Password</string>
    <string name="signUp_submit">Submit</string>
    <string name="signUp_back">Already have an account? LogIn</string>

    <string name="update_title">Update page:</string>
    <string name="update_text_name">Name of the store:</string>
    <string name="update_text_description">Write a description about your store:</string>
    <string name="update_text_image">Add Image:</string>
    <string name="update_button_image">Upload</string>
    <string name="update_button_finish">FINISH</string>

    <string name="seller_button_update">Update page</string>
    <string name="seller_button_chat">Chat List</string>
    <string name="seller_text_description">Description:</string>

    <string name="seller_button_review">Add Review</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_buyer_screen">Map</string>

    <string name="review_text_title">Add Review:</string>
    <string name="review_text_ratingBar">How many stars from the sky would you like to bring to this store:</string>
    <string name="review_text_textFiled">Please share with everyone how delicious was our service:</string>
    <string name="review_text_button">Submit</string>

    <string name="reviewFragment_text">All review:</string>
    <string name="reviewFragment_text_0">There are not reviews yet</string>

    <string name="createShop_title">Create Shop:</string>
    <string name="createShop_addres">Store address:</string>
    <string name="createShop_instagram">Your nickname in instagram:</string>

    <string name="chat_text">Type a message...</string>
    <string name="chats_titel">Chats:</string>

    <string name="header_titel">SugerTime</string>

    <string name="login_progressBar">Loading...</string>

    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
</resources>