<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Review_screen">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/seller_LBL_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cookie"
            android:padding="20dp"
            android:text="@string/review_text_title"
            android:textColor="#000000"
            android:textSize="45sp" />

        <ImageView
            android:id="@+id/review_IMG_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#000000"
        android:textSize="15sp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/review_text_ratingBar"/>

    <RatingBar
        android:id="@+id/review_RTB_rating"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="3"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        android:textSize="15sp"
        android:text="@string/review_text_textFiled"/>

    <EditText
        android:id ="@+id/review_LBL_buyerReview"
        android:layout_width ="match_parent"
        android:layout_height ="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines ="2"
        android:maxLength ="100"
        android:scrollHorizontally="false"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/review_BTN_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/review_text_button"/>

</LinearLayout>