<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopPage_screen"
    android:id="@+id/shop_LAY_drawerLayout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/shop_LAY_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/haeder"
        app:menu="@menu/main_manu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/shop_TLB_menu"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                app:navigationIcon="@drawable/ic_menu" />

            <TextView
                android:id="@+id/seller_LBL_shopName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cookie"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#0D1E78"
                android:textSize="45sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/seller_BTN_chatWithSeller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="16dp"
                android:backgroundTint="#0D1E78"
                app:srcCompat="@drawable/ic_chat" />


        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:background="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/cookie"
            android:text="@string/seller_text_description"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/seller_LBL_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="20dp"
            android:maxLines="4"
            android:textColor="#000000"
            android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/seller_RCV_pictureList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <LinearLayout
            android:id="@+id/seller_LAY_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seller_BTN_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/seller_button_update"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/shop_BTN_chatList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/seller_button_chat" />
        </LinearLayout>

        <Button
            android:id="@+id/seller_BTN_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/seller_button_review" />

        <FrameLayout
            android:id="@+id/seller_LAY_reviewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>